@@ -285,6 +285,9 @@ function getUrlFromRequestAndOptions (req, options, fallbackProtocol) {
   options = options || {}
   req = req || {}
   req.agent = req.agent || {}
+  if (isProxiedRequest(req)) {
+    return req.path
+  }
 
   const port = options.port ? `:${options.port}` : ''
   // req.host and req.protocol are node versions v14.5.0/v12.19.0 and later
@@ -292,6 +295,10 @@ function getUrlFromRequestAndOptions (req, options, fallbackProtocol) {
   const protocol = req.protocol || req.agent.protocol || fallbackProtocol
 
   return `${protocol}//${host}${port}${req.path}`
+}
+
+function isProxiedRequest (req) {
+  return req.path.indexOf('https:') === 0 || req.path.indexOf('http:') === 0
 }
 
 exports.getUrlFromRequestAndOptions = getUrlFromRequestAndOptions
